--- a/playerdetail.html
+++ b/playerdetail.html
@@ -4,99 +4,106 @@
   <meta charset="UTF-8" />
   <title>Player Detail</title>
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   <style>
-    /* BODY & GLOBAL STYLES */
+    /* GLOBAL STYLES */
     body {
-      font-family: 'Open Sans', Arial, sans-serif;
+      font-family: 'Poppins', Arial, sans-serif;
       margin: 0;
       padding: 0;
-      /* Subtle gradient background */
-      background: linear-gradient(135deg, #eef2f3 0%, #8e9eab 100%);
+      background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
       color: #333;
+      line-height: 1.6;
     }
-
     /* WRAPPER for consistent centering and spacing */
     .wrapper {
-      max-width: 700px;
+      max-width: 800px;
       margin: 40px auto;
-      padding: 20px;
+      padding: 30px;
       background-color: #fff;
-      border-radius: 10px;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+      border-radius: 15px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     }
-
     h1 {
       text-align: center;
       margin-top: 0;
       font-weight: 600;
+      color: #2c3e50;
+      letter-spacing: 1px;
     }
-
     /* TABLE STYLES */
     .detail-table {
       width: 100%;
       border-collapse: collapse;
-      margin: 0 auto 20px auto;
+      margin: 20px auto;
     }
     .detail-table th {
-      background-color: #f7f7f7;
-      text-align: center;
-      padding: 10px;
+      background-color: #f9fafb;
+      text-align: left;
+      padding: 12px 15px;
       font-weight: 600;
-      border-bottom: 2px solid #ddd;
+      color: #34495e;
+      border-bottom: 2px solid #eaeaea;
     }
     .detail-table td {
-      border: 1px solid #ddd;
-      padding: 10px;
+      border: none;
+      padding: 12px 15px;
       vertical-align: top;
+      color: #555;
     }
-    /* Let the top row have a bit of a highlight */
+    /* Highlighted Header Row */
     .detail-table th[colspan="2"] {
-      font-size: 1.1rem;
-      background-color: #ececec;
+      font-size: 1.2rem;
+      background-color: #ecf0f1;
+      color: #2c3e50;
+      text-align: center;
+      border-radius: 8px 8px 0 0;
     }
-    /* Photo cell styling */
+    /* Photo Cell Styling */
     .photo-cell {
       text-align: center;
-      border-right: 2px solid #ddd;
+      border-right: 2px solid #eaeaea;
     }
     .player-photo {
-      max-width: 100px;
-      border: 1px solid #ccc;
+      max-width: 120px;
+      border: 2px solid #ddd;
+      border-radius: 10px;
       margin: 10px 0;
-      border-radius: 6px;
+      transition: transform 0.3s ease;
     }
-
+    .player-photo:hover {
+      transform: scale(1.1);
+    }
     /* PRINT BUTTON STYLES */
     .print-btn {
       display: inline-block;
-      margin: 0 auto;
-      padding: 12px 20px;
+      margin: 20px auto;
+      padding: 14px 24px;
       cursor: pointer;
-      background-color: #2196F3;
+      background-color: #3498db;
       color: #fff;
       border: none;
-      border-radius: 5px;
+      border-radius: 8px;
       font-size: 1rem;
       text-align: center;
       transition: background-color 0.3s ease;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     }
     .print-btn:hover {
-      background-color: #0b7dda;
+      background-color: #2980b9;
     }
-
     /* Responsive Adjustments */
-    @media (max-width: 600px) {
+    @media (max-width: 768px) {
       .wrapper {
         margin: 20px;
-        padding: 10px;
+        padding: 20px;
       }
       .detail-table th, .detail-table td {
         font-size: 0.9rem;
-        padding: 6px;
+        padding: 10px;
       }
       .player-photo {
-        max-width: 80px;
+        max-width: 100px;
       }
     }
   </style>
@@ -104,13 +111,12 @@
 <body>
   <div class="wrapper">
     <h1>Player Detail</h1>
-
     <table class="detail-table" id="detailTable">
       <tr>
         <th colspan="2">Player Information</th>
       </tr>
       <tr>
-        <!-- Photo column, spanning multiple rows if desired -->
+        <!-- Photo column -->
         <td class="photo-cell" rowspan="11">
           <img id="playerPhoto" src="" alt="Player Photo" class="player-photo">
         </td>
@@ -164,17 +170,14 @@
         <td id="ballWeight"></td>
       </tr>
     </table>
-
     <div style="text-align: center;">
       <button class="print-btn" onclick="window.print()">Print</button>
     </div>
   </div>
-
   <script>
     // Extract player ID from URL
     const urlParams = new URLSearchParams(window.location.search);
     const playerId = urlParams.get('id');
-
     if (!playerId) {
       alert('No player ID specified!');
     } else {
@@ -182,7 +185,6 @@
       const allPlayers = JSON.parse(localStorage.getItem('bowlingPlayers')) || [];
       // Find the player with matching ID
       const player = allPlayers.find(p => p.id.toString() === playerId);
-
       if (!player) {
         alert('Player not found!');
       } else {
